scripts/artifacts/node-deployment-registry1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  namespace: nsX
spec:
  selector:
    matchLabels:
      app: node-app
  replicas: 1
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: image-registry.openshift-image-registry.svc:5000/nsX/hellonode:1.0
          ports:
            - containerPort: 8080
