scripts/artifacts/was-deployment-registry1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websphere-liberty-app
  namespace: nsX
spec:
  selector:
    matchLabels:
      app: websphere-liberty-app
  replicas: 1
  template:
    metadata:
      labels:
        app: websphere-liberty-app
    spec:
      containers:
        - name: websphere-liberty-app
          image: image-registry.openshift-image-registry.svc:5000/nsX/hellok8s:1.0
          ports:
            - containerPort: 9080
