scripts/artifacts/node-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service1
  namespace: nsX
spec:
  selector:
    app: node-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
