scripts/artifacts/was-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: websphere-liberty-service2
  namespace: nsX
spec:
  selector:
    app: websphere-liberty-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
