scripts/artifacts/allow-specific.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific
spec:
  podSelector:
    matchLabels:
      deployment: front
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: ns-network
        podSelector:
          matchLabels:
            deployment: test
      ports:
      - port: 8080
        protocol: TCP
